--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú del Restaurante</title>
+    <title>Menú Burger Shot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Menú del Restaurante</h1>
+        <h1>Menú Burger Shot</h1>
     </header>
     
     <section id="menu">
         <h2>Menú</h2>
         <div class="menu-item">
-            <img src="imagenes/pizza.jpg" alt="Pizza Margarita">
-            <h3>Pizza Margarita</h3>
-            <p>Tomate, mozzarella y albahaca - $8.99</p>
+            <img src="imagenes/burgerShot_baconlov.ppg" alt="Quecu Infarto">
+            <h3>Quecu Infarto</h3>
         </div>
         <div class="menu-item">
             <img src="imagenes/hamburguesa.jpg" alt="Hamburguesa Clásica">
