--- a/index.html
+++ b/index.html
@@ -3,29 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Burger Shot</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Menú de Burger Shot</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            color: #d32f2f;
+        }
+        h2 {
+            color: #1976d2;
+            border-bottom: 2px solid #1976d2;
+            padding-bottom: 5px;
+        }
+        .menu-section {
+            margin: 20px 0;
+        }
+        .item {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            align-items: center;
+        }
+        .item-name {
+            font-weight: bold;
+        }
+        .item-price {
+            color: #d32f2f;
+        }
+        .description {
+            font-size: 0.9em;
+            color: #666;
+            margin-left: 20px;
+        }
+        .item img {
+            width: 100px;
+            height: auto;
+            margin-right: 15px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Menú Burger Shot</h1>
-    </header>
-    
-    <section id="menu">
-        <h2>Menú</h2>
-        <div class="menu-item">
-            <img src="imagenes/burgerShot_baconlov.ppg" alt="Quecu Infarto">
-            <h3>Quecu Infarto</h3>
+    <h1>Menú de Burger Shot</h1>
+    <p style="text-align: center; font-style: italic;">¡Bienvenidos a la mejor experiencia de hamburguesas!</p>
+
+    <div class="menu-section">
+        <h2>Hamburguesas Clásicas</h2>
+        <div class="item">
+            <img src="imagenes/burger_shot_original.jpg" alt="Burger Shot Original">
+            <span class="item-name">Burger Shot Original</span>
+            <span class="item-price">$8.50</span>
         </div>
-        <div class="menu-item">
-            <img src="imagenes/hamburguesa.jpg" alt="Hamburguesa Clásica">
-            <h3>Hamburguesa Clásica</h3>
-            <p>Carne 100% res, lechuga, tomate, queso - $7.99</p>
+        <div class="description">Carne jugosa, lechuga, tomate, queso cheddar y nuestra salsa especial.</div>
+
+        <div class="item">
+            <img src="imagenes/double_shot.jpg" alt="Double Shot">
+            <span class="item-name">Double Shot</span>
+            <span class="item-price">$11.00</span>
         </div>
-    </section>
-    
-    <footer>
-        <p>&copy; 2025 Menú del Restaurante</p>
-    </footer>
+        <div class="description">Doble carne, doble queso, cebolla caramelizada y pepinillos.</div>
+
+        <div class="item">
+            <span class="item-name">Chicken Shot</span>
+            <span class="item-price">$7.80</span>
+        </div>
+        <div class="description">Pollo crujiente, mayonesa picante, lechuga y tomate.</div>
+    </div>
+
+    <div class="menu-section">
+        <h2>Especialidades de la Casa</h2>
+        <div class="item">
+            <img src="imagenes/mega_shot.jpg" alt="Mega Shot">
+            <span class="item-name">Mega Shot</span>
+            <span class="item-price">$13.50</span>
+        </div>
+        <div class="description">Triple carne, bacon, queso suizo, aros de cebolla y salsa BBQ.</div>
+
+        <div class="item">
+            <span class="item-name">Veggie Shot</span>
+            <span class="item-price">$9.00</span>
+        </div>
+        <div class="description">Hamburguesa vegetariana con aguacate, rúcula y alioli de ajo.</div>
+    </div>
+
+    <div class="menu-section">
+        <h2>Acompañamientos</h2>
+        <div class="item">
+            <img src="imagenes/papas_fritas.jpg" alt="Papas Fritas">
+            <span class="item-name">Papas Fritas Clásicas</span>
+            <span class="item-price">$3.50</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Papas con Queso y Bacon</span>
+            <span class="item-price">$5.00</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Aros de Cebolla</span>
+            <span class="item-price">$4.20</span>
+        </div>
+    </div>
+
+    <div class="menu-section">
+        <h2>Bebidas</h2>
+        <div class="item">
+            <span class="item-name">Refresco (Cola, Limón, Naranja)</span>
+            <span class="item-price">$2.50</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Milkshake (Vainilla, Chocolate, Fresa)</span>
+            <span class="item-price">$4.50</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Cerveza Local</span>
+            <span class="item-price">$5.00</span>
+        </div>
+    </div>
+
+    <div class="menu-section">
+        <h2>Postres</h2>
+        <div class="item">
+            <img src="imagenes/brownie_shot.jpg" alt="Brownie Shot">
+            <span class="item-name">Brownie Shot</span>
+            <span class="item-price">$3.80</span>
+        </div>
+        <div class="description">Con helado de vainilla y salsa de chocolate.</div>
+
+        <div class="item">
+            <span class="item-name">Mini Donuts</span>
+            <span class="item-price">$4.00</span>
+        </div>
+        <div class="description">Cubiertos de azúcar y canela.</div>
+    </div>
 </body>
 </html>
