--- a/index.html
+++ b/index.html
@@ -4,55 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú de Burger Shot</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        h1 {
-            text-align: center;
-            color: #d32f2f;
-        }
-        h2 {
-            color: #1976d2;
-            border-bottom: 2px solid #1976d2;
-            padding-bottom: 5px;
-        }
-        .menu-section {
-            margin: 20px 0;
-        }
-        .item {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            align-items: center;
-        }
-        .item-name {
-            font-weight: bold;
-        }
-        .item-price {
-            color: #d32f2f;
-        }
-        .description {
-            font-size: 0.9em;
-            color: #666;
-            margin-left: 20px;
-        }
-        .item img {
-            width: 100px;
-            height: auto;
-            margin-right: 15px;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Menú de Burger Shot</h1>
-    <p style="text-align: center; font-style: italic;">¡Bienvenidos a la mejor experiencia de hamburguesas!</p>
+    <p>¡Bienvenidos a la mejor experiencia de hamburguesas!</p>
 
     <div class="menu-section">
         <h2>Hamburguesas Clásicas</h2>
