--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú de Burger Shot</title>
+    <title>Menú de Burger Shot - Bacon Love</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -20,8 +20,8 @@
 
     <!-- Contenedor de thumbnails (tarjetas pequeñas) -->
     <div class="menu-thumbnails">
-        <!-- Solo una tarjeta para la hamburguesa Quecu Infarto -->
-        <div class="thumbnail" onclick="showDetails('quecuinfarto')">
+        <!-- Solo una tarjeta para la hamburguesa Bacon Love -->
+        <div class="thumbnail" onclick="showDetails('baconlove')">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
         </div>
     </div>
