--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <div class="thumbnail" onclick="showDetails('baconlove')">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
         </div>
+        <div class="thumbnail" onclick="showDetails('cajitafeliz')">
+            <img src="imagenes/BurgerShot_MenuKid.png" alt="Cajita Feliz">
+        </div>
     </div>
 
     <!-- Modal para mostrar detalles (ampliada) -->
