Burrito de pollo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="thumbnail" onclick="showDetails('cajitafeliz')">
             <img src="imagenes/BurgerShot_MenuKid.png" alt="Cajita Feliz">
         </div>
+        <div class="thumbnail" onclick="showDetails('burritopollo')">
+            <img src="imagenes/burgerShot_BuritosChicken.png" alt="Burrito de Pollo">
+        </div>
     </div>
 
     <!-- Modal para mostrar detalles (ampliada) -->
