--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="thumbnail" onclick="showDetails('burritopollo')">
             <img src="imagenes/burgerShot_BuritosChicken.png" alt="Burrito de Pollo">
         </div>
+        <div class="thumbnail" onclick="showDetails('cheeseburger')">
+            <img src="imagenes/imagenes/burgerShot_cheese.png" alt="Hamburguesa con queso">
+        </div>
     </div>
 
     <!-- Modal para mostrar detalles (ampliada) -->
