--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="thumbnail" onclick="showDetails('cheeseburger')">
             <img src="imagenes/burgerShot_cheese.png" alt="Hamburguesa con queso">
         </div>
+        <div class="thumbnail" onclick="showDetails('cheeseburger2')">
+            <img src="imagenes/burgerShot_cheese2.png" alt="Hamburguesa doble con queso">
+        </div>
     </div>
 
     <!-- Modal para mostrar detalles (ampliada) -->
