--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="thumbnail" onclick="showDetails('cheeseburger2')">
             <img src="imagenes/burgerShot_cheese2.png" alt="Hamburguesa doble con queso">
         </div>
+        <div class="thumbnail" onclick="showDetails('cheeseburger3')">
+            <img src="imagenes/burgerShot_cheese3.png" alt="Hamburguesa triple con queso">
+        </div>
     </div>
 
     <!-- Modal para mostrar detalles (ampliada) -->
