--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <!-- Título del menú con animación -->
-    <h1 class="title">Nuestro Menu</h1>
+    <h1 class="title">Nuestro Menú</h1>
 
     <!-- Contenedor de thumbnails (tarjetas pequeñas) -->
     <div class="menu-thumbnails">
