--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="logo-container">
             <img src="imagenes/logo_burgershot.png" alt="Logo Burger Shot" class="logo">
         </div>
-        <!-- Botón en la esquina superior derecha -->
         <div class="button-container">
             <button onclick="window.location.href='combos.html'" class="menu-button">Menús</button>
+            <button onclick="window.location.href='bebidas.html'" class="menu-button">Bebidas</button>
         </div>
     </header>
 
