--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="imagenes/burgerShot_BuritosChicken.png" alt="Burrito de Pollo">
         </div>
         <div class="thumbnail" onclick="showDetails('comboEspecial')">
-            <img src="imagenes/combo_especial.png" alt="Combo Especial">
+            <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburgers">
         </div>
     </div>
 
