--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="thumbnail" onclick="showDetails('burritopollo')">
             <img src="imagenes/burgerShot_BuritosChicken.png" alt="Burrito de Pollo">
         </div>
-        <div class="thumbnail" onclick="showDetails('comboEspecial')">
+        <div class="thumbnail" onclick="showDetails('cheeseburgers')">
             <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburgers">
         </div>
     </div>
