--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="thumbnail" onclick="showDetails('baconlove')">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
         </div>
-        <div class="thumbnail" onclick="showDetails('comboEspecial')">
+        <div class="thumbnail" onclick="showDetails('cheeseburgers')">
             <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburgers">
         </div>
         <div class="thumbnail" onclick="showDetails('cajitafeliz')">
