--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="thumbnail" onclick="showDetails('burrito')">
             <img src="imagenes/burgerShot_buritos.png" alt="Burrito">
         </div>
+        <div class="thumbnail" onclick="showDetails('pollofrito')">
+            <img src="imagenes/burgerShot_chickenStick.png" alt="Pollo Frito">
+        </div>
     </div>
 
     <div id="modal" class="modal">
