--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="thumbnail" onclick="showDetails('pollofrito')">
             <img src="imagenes/burgerShot_chickenStick.png" alt="Pollo Frito">
         </div>
+        <div class="thumbnail" onclick="showDetails('nashot')">
+            <img src="imagenes/burgerShot_natchos.png" alt="Nashots">
+        </div>
     </div>
 
     <div id="modal" class="modal">
