--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <h1 class="title">Nuestro Menu</h1>
+    <h1 class="title">Nuestro Menú</h1>
 
     <div class="menu-thumbnails">
         <div class="thumbnail" onclick="showDetails('baconlove')">
