--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="thumbnail" onclick="showDetails('nashot')">
             <img src="imagenes/burgerShot_natchos.png" alt="Nashots">
         </div>
+        <div class="thumbnail" onclick="showDetails('patatas')">
+            <img src="imagenes/burgerShot_LoadedFries.png" alt="Patatas">
+        </div>
     </div>
 
     <div id="modal" class="modal">
