--- a/bebidas.html
+++ b/bebidas.html
@@ -21,8 +21,8 @@
 
     <!-- Contenedor de thumbnails para bebidas -->
     <div class="menu-thumbnails">
-        <div class="thumbnail" onclick="showDetails('refresco')">
-            <img src="imagenes/refresco.png" alt="Refresco">
+        <div class="thumbnail" onclick="showDetails('milfshake')">
+            <img src="imagenes/0.milkskake.png" alt="Milfshake">
         </div>
         <div class="thumbnail" onclick="showDetails('jugo')">
             <img src="imagenes/jugo.png" alt="Jugo">
