--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="#combos" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
-                <a href="#bebidas" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
+                <a href="/combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
+                <a href="/bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="#contacto" class="nav-link cta-button">Pedir Ahora</a>
             </div>
         </nav>
