--- a/bebidas.html
+++ b/bebidas.html
@@ -6,33 +6,54 @@
     <title>Bebidas - Burger Shot</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <img src="imagenes/logo_burgershot.png" alt="Logo Burger Shot" class="logo">
-        </div>
-        <div class="button-container">
-            <button onclick="window.location.href='index.html'" class="menu-button">Menú Principal</button>
-        </div>
+        <nav class="nav-container">
+            <div class="logo-container">
+                <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
+            </div>
+            <div class="nav-links">
+                <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
+                <a href="" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
+                <a href="#contacto" class="nav-link cta-button">Pedir Ahora</a>
+            </div>
+        </nav>
     </header>
 
-    <h1 class="title">Nuestras Bebidas</h1>
+    <section class="hero">
+        <h1 class="hero-title">Descubre el <span>verdadero sabor</span><br>de nuestras bebidas</h1>
+        <div class="scroll-indicator">
+            <div class="mouse"></div>
+        </div>
+    </section>
 
-    <!-- Contenedor de thumbnails para bebidas -->
-    <div class="menu-thumbnails">
-        <div class="thumbnail" onclick="showDetails('milfshake')">
-            <img src="imagenes/0.milkskake.png" alt="Milfshake">
+    <section class="menu-section">
+        <h2 class="section-title">Nuestras Bebidas</h2>
+        <div class="menu-grid">
+            <div class="menu-item" onclick="showDetails('milfshake')">
+                <img src="imagenes/0.milkskake.png" alt="Milkshake">
+                <h3>Milkshake</h3>
+                <p>Batido cremoso de vainilla, chocolate o fresa.</p>
+                <span class="price">$4.99</span>
+            </div>
+            <div class="menu-item" onclick="showDetails('jugo')">
+                <img src="imagenes/jugo.png" alt="Jugo">
+                <h3>Jugo Natural</h3>
+                <p>Jugo fresco de naranja, manzana o piña.</p>
+                <span class="price">$3.99</span>
+            </div>
+            <div class="menu-item" onclick="showDetails('cerveza')">
+                <img src="imagenes/cerveza.png" alt="Cerveza">
+                <h3>Cerveza Artesanal</h3>
+                <p>Cerveza fría de barril, variedad de sabores.</p>
+                <span class="price">$5.99</span>
+            </div>
         </div>
-        <div class="thumbnail" onclick="showDetails('jugo')">
-            <img src="imagenes/jugo.png" alt="Jugo">
-        </div>
-        <div class="thumbnail" onclick="showDetails('cerveza')">
-            <img src="imagenes/cerveza.png" alt="Cerveza">
-        </div>
-    </div>
+    </section>
 
-    <!-- Modal para mostrar detalles -->
+    <!-- Modal para detalles -->
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">×</span>
@@ -40,6 +61,6 @@
         </div>
     </div>
 
-    <script src="bebidas.js"></script> <!-- Nuevo archivo JavaScript para bebidas -->
+    <script src="bebidas.js"></script>
 </body>
 </html>
