--- a/combos.html
+++ b/combos.html
@@ -6,34 +6,54 @@
     <title>Menús - Burger Shot</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <img src="imagenes/logo_burgershot.png" alt="Logo Burger Shot" class="logo">
-        </div>
-        <div class="button-container">
-            <button onclick="window.location.href='index.html'" class="menu-button">Menú Principal</button>
-        </div>
+        <nav class="nav-container">
+            <div class="logo-container">
+                <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
+            </div>
+            <div class="nav-links">
+                <a href="" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
+                <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
+                <a href="#contacto" class="nav-link cta-button">Pedir Ahora</a>
+            </div>
+        </nav>
     </header>
 
-    <h1 class="title">Nuestros Menús</h1>
+    <section class="hero">
+        <h1 class="hero-title">Descubre el <span>verdadero sabor</span><br>de nuestras hamburguesas</h1>
+        <div class="scroll-indicator">
+            <div class="mouse"></div>
+        </div>
+    </section>
 
-    <!-- Contenedor de thumbnails para productos -->
-    <div class="menu-thumbnails">
-        <div class="thumbnail" onclick="showDetails('combo1')">
-            <img src="imagenes/combo1.png" alt="Combo 1">
+    <section class="menu-section">
+        <h2 class="section-title">Nuestros Menus</h2>
+        <div class="menu-grid">
+            <div class="menu-item" onclick="showDetails('combo1')">
+                <img src="imagenes/combo1.png" alt="Combo 1">
+                <h3>Combo 1</h3>
+                <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
+                <span class="price">$9.99</span>
+            </div>
+            <div class="menu-item" onclick="showDetails('combo2')">
+                <img src="imagenes/combo2.png" alt="Combo 2">
+                <h3>Combo 2</h3>
+                <p>Hamburguesa doble con bacon, aros de cebolla y refresco.</p>
+                <span class="price">$12.99</span>
+            </div>
+            <div class="menu-item" onclick="showDetails('combo3')">
+                <img src="imagenes/combo3.png" alt="Combo 3">
+                <h3>Combo 3</h3>
+                <p>Hamburguesa vegetariana con ensalada y batido.</p>
+                <span class="price">$10.99</span>
+            </div>
         </div>
-        <div class="thumbnail" onclick="showDetails('combo2')">
-            <img src="imagenes/combo2.png" alt="Combo 2">
-        </div>
-        <div class="thumbnail" onclick="showDetails('combo3')">
-            <img src="imagenes/combo3.png" alt="Combo 3">
-        </div>
-        <!-- Puedes agregar más thumbnails aquí -->
-    </div>
+    </section>
 
-    <!-- Modal para mostrar detalles -->
+    <!-- Modal para detalles -->
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">×</span>
@@ -41,6 +61,6 @@
         </div>
     </div>
 
-    <script src="combos.js"></script> <!-- Nuevo archivo JavaScript para esta página -->
+    <script src="combos.js"></script>
 </body>
 </html>
