--- a/bebidas.html
+++ b/bebidas.html
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-links">
                 <a href="combos.html" class="nav-link"><i class="fas fa-burger"></i>Combos</a>
-                <a href="" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
+                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
                 <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Pedir Ahora</a>
             </div>
         </nav>
