--- a/combos.html
+++ b/combos.html
@@ -15,7 +15,7 @@
                 <img src="imagenes/logo_burgershot.png" alt="Burger Shot" class="logo">
             </div>
             <div class="nav-links">
-                <a href="" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
+                <a href="/BurgerShot/" class="nav-link"><i class="fas fa-cocktail"></i>Inicio</a>
                 <a href="bebidas.html" class="nav-link"><i class="fas fa-cocktail"></i>Bebidas</a>
                 <a href="https://forms.gle/2hqaSMFD3Gk89B6AA" class="nav-link cta-button">Pedir Ahora</a>
             </div>
