--- a/bebidas.html
+++ b/bebidas.html
@@ -40,11 +40,11 @@
                 <span class="price">$4.99</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('jugo')">
-                <img src="imagenes/jugo.png" alt="Jugo">
-                <h3>Jugo Natural</h3>
-                <p>Jugo fresco de naranja, manzana o piña.</p>
-                <span class="price">$3.99</span>
+            <div class="menu-item" onclick="showDetails('burgercafé')">
+                <img src="imagenes/Coffe_burgershot.png" alt="Café Burger">
+                <h3>Café Burger</h3>
+                <p>Café bien bueno</p>
+                <span class="price">$40</span>
             </div>
 
             <div class="menu-item" onclick="showDetails('cerveza')">
