--- a/bebidas.html
+++ b/bebidas.html
@@ -48,10 +48,10 @@
             </div>
 
             <div class="menu-item" onclick="showDetails('cerveza')">
-                <img src="imagenes/cerveza.png" alt="Cerveza">
+                <img src="imagenes/beer.png" alt="Cerveza">
                 <h3>Cerveza Artesanal</h3>
                 <p>Cerveza fría de barril, variedad de sabores.</p>
-                <span class="price">$5.99</span>
+                <span class="price">$50</span>
             </div>
             
         </div>
