--- a/bebidas.html
+++ b/bebidas.html
@@ -53,6 +53,13 @@
                 <p>Cerveza fría de barril, variedad de sabores.</p>
                 <span class="price">$50</span>
             </div>
+
+            <div class="menu-item" onclick="showDetails('agua')">
+                <img src="imagenes/water_bottle.png" alt="Agua">
+                <h3>Agua</h3>
+                <p>Pura y refrescante.</p>
+                <span class="price">$40</span>
+            </div>
             
         </div>
     </section>
