--- a/bebidas.html
+++ b/bebidas.html
@@ -60,6 +60,13 @@
                 <p>Pura y refrescante.</p>
                 <span class="price">$40</span>
             </div>
+
+            <div class="menu-item" onclick="showDetails('burgersoda')">
+                <img src="imagenes/drink_burger.png" alt="Burger soda">
+                <h3>Burger soda</h3>
+                <p>Pura y refrescante.</p>
+                <span class="price">$50</span>
+            </div>
             
         </div>
     </section>
