--- a/index.html
+++ b/index.html
@@ -33,32 +33,11 @@
         <h2 class="section-title">Nuestra Explosión de Sabores</h2>
         <div class="menu-grid">
 
-        <div class="thumbnail" onclick="showDetails('baconlove')">
+        <div class="menu-item" onclick="showDetails('baconlove')">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
-        </div>
-        
-        <div class="thumbnail" onclick="showDetails('comboEspecial')">
-            <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburgers">
-        </div>
-
-        <div class="thumbnail" onclick="showDetails('cajitafeliz')">
-            <img src="imagenes/BurgerShot_MenuKid.png" alt="Cajita Feliz">
-        </div>
-
-        <div class="thumbnail" onclick="showDetails('burrito')">
-            <img src="imagenes/burgerShot_buritos.png" alt="Burrito">
-        </div>
-
-        <div class="thumbnail" onclick="showDetails('pollofrito')">
-            <img src="imagenes/burgerShot_chickenStick.png" alt="Pollo Frito">
-        </div>
-
-        <div class="thumbnail" onclick="showDetails('nashot')">
-            <img src="imagenes/burgerShot_natchos.png" alt="Nashots">
-        </div>
-
-        <div class="thumbnail" onclick="showDetails('patatas')">
-            <img src="imagenes/frites_burgershot.png" alt="Patatas">
+            <h3>Combo 1</h3>
+            <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
+            <span class="price">$9.99</span>
         </div>
         
     </section>
