Remove onclick handlers from menu items for improved structure and maintainability

--- a/bebidas.html
+++ b/bebidas.html
@@ -33,35 +33,35 @@
         <h2 class="section-title">Nuestras Bebidas</h2>
         <div class="menu-grid">
 
-            <div class="menu-item" onclick="showDetails('milfshake')">
+            <div class="menu-item">
                 <img src="imagenes/0.milkskake.png" alt="Milkshake">
                 <h3>Milkshake</h3>
                 <p>Batido cremoso de vainilla, chocolate o fresa.</p>
                 <span class="price">$4.99</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('burgercafé')">
+            <div class="menu-item">
                 <img src="imagenes/Coffe_burgershot.png" alt="Café Burger">
                 <h3>Café Burger</h3>
                 <p>Café bien bueno</p>
                 <span class="price">$40</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('cerveza')">
+            <div class="menu-item">
                 <img src="imagenes/beer.png" alt="Cerveza">
                 <h3>Cerveza Artesanal</h3>
                 <p>Cerveza fría de barril, variedad de sabores.</p>
                 <span class="price">$50</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('agua')">
+            <div class="menu-item">
                 <img src="imagenes/water_bottle.png" alt="Agua">
                 <h3>Agua</h3>
                 <p>Pura y refrescante.</p>
                 <span class="price">$40</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('burgersoda')">
+            <div class="menu-item">
                 <img src="imagenes/drink_burger.png" alt="Burger soda">
                 <h3>Burger soda</h3>
                 <p>Pura y refrescante.</p>
@@ -70,14 +70,6 @@
             
         </div>
     </section>
-
-    <!-- Modal para detalles -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">×</span>
-            <div id="modal-details"></div>
-        </div>
-    </div>
 
     <script src="bebidas.js"></script>
 </body>
