--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="section-title">Nuestra Explosión de Sabores</h2>
         <div class="menu-grid">
 
-        <div class="menu-item" onclick="showDetails('baconlove')">
+        <div class="menu-item">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
             <h3>Combo 1</h3>
             <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
@@ -42,13 +42,6 @@
         
     </section>
     
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">×</span>
-            <div id="modal-details"></div>
-        </div>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
