--- a/combos.html
+++ b/combos.html
@@ -33,21 +33,21 @@
         <h2 class="section-title">Nuestros Menus</h2>
         <div class="menu-grid">
 
-            <div class="menu-item" onclick="showDetails('combo1')">
+            <div class="menu-item">
                 <img src="imagenes/combo1.png" alt="Combo 1">
                 <h3>Combo 1</h3>
                 <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
                 <span class="price">$9.99</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('combo2')">
+            <div class="menu-item">
                 <img src="imagenes/combo2.png" alt="Combo 2">
                 <h3>Combo 2</h3>
                 <p>Hamburguesa doble con bacon, aros de cebolla y refresco.</p>
                 <span class="price">$12.99</span>
             </div>
 
-            <div class="menu-item" onclick="showDetails('combo3')">
+            <div class="menu-item">
                 <img src="imagenes/combo3.png" alt="Combo 3">
                 <h3>Combo 3</h3>
                 <p>Hamburguesa vegetariana con ensalada y batido.</p>
@@ -56,14 +56,6 @@
             
         </div>
     </section>
-
-    <!-- Modal para detalles -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">×</span>
-            <div id="modal-details"></div>
-        </div>
-    </div>
 
     <script src="combos.js"></script>
 </body>
