--- a/index.html
+++ b/index.html
@@ -34,10 +34,38 @@
         <div class="menu-grid">
 
         <div class="menu-item">
-            <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto">
-            <h3>Combo 1</h3>
-            <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
-            <span class="price">$9.99</span>
+            <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto con Bacon">
+            <h3>Quecu Infarto con Bacon</h3>
+            <p>Deliciosa hamburguesa que te ofrecera una experiencia por el hospital.</p>
+            <span class="price">$70</span>
+        </div>
+            
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_HEARTSTOPPER.png" alt="Hamburguesa Quecu Infarto con Queso">
+            <h3>Quecu Infarto con Queso</h3>
+            <p>Deliciosa hamburguesa que te ofrecera una experiencia por el hospital.</p>
+            <span class="price">$70</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_Chicken.png" alt="Hamburguesa de Pollo">
+            <h3>Hamburguesa de pollo</h3>
+            <p>Deliciosa hamburguesa de pollo.</p>
+            <span class="price">$65</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_bleeder.png" alt="Hamburguesa doble de Pollo">
+            <h3>Hamburguesa doble de pollo</h3>
+            <p>Deliciosa doble hamburguesa de pollo.</p>
+            <span class="price">$70</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_bleeder.png" alt="Hamburguesa doble">
+            <h3>Hamburguesa doble</h3>
+            <p>Deliciosa doble hamburguesa.</p>
+            <span class="price">$65</span>
         </div>
         
     </section>
