--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@
             <p>Deliciosa doble hamburguesa.</p>
             <span class="price">$65</span>
         </div>
-        
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_cheese.png" alt="Cheeseburger">
+            <h3>Cheeseburger Normal</h3>
+            <p>Deliciosa hamburguesa con queso</p>
+            <span class="price">$60</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_cheese2.png" alt="Cheeseburger2">
+            <h3>Doble Cheeseburger</h3>
+            <p>Deliciosa doble hamburguesa con queso</p>
+            <span class="price">$65</span>
+        </div>
+
+                <div class="menu-item">
+            <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburger3">
+            <h3>Triple Cheeseburger</h3>
+            <p>Deliciosa triple hamburguesa con queso</p>
+            <span class="price">$70/span>
+        </div>
+            
     </section>
 
 </body>
