--- a/bebidas.html
+++ b/bebidas.html
@@ -42,7 +42,7 @@
 
             <div class="menu-item">
                 <img src="imagenes/Coffe_burgershot.png" alt="Café Burger">
-                <h3>Café Burger</h3>
+                <h3>Shot Café</h3>
                 <p>Café bien bueno</p>
                 <span class="price">$40</span>
             </div>
