--- a/combos.html
+++ b/combos.html
@@ -30,14 +30,14 @@
     </section>
 
     <section class="menu-section">
-        <h2 class="section-title">Nuestros Menus</h2>
+        <h2 class="section-title">Nuestros Menús</h2>
         <div class="menu-grid">
 
             <div class="menu-item">
-                <img src="imagenes/combo1.png" alt="Combo 1">
-                <h3>Combo 1</h3>
-                <p>Deliciosa hamburguesa con queso, papas fritas y bebida.</p>
-                <span class="price">$9.99</span>
+                <img src="imagenes/donutsbox_SweetHoles.png" alt="Burger desayuno">
+                <h3>Burger desayuno/h3>
+                <p>Deliciosos menú para tus desayunos, con donuts y café.</p>
+                <span class="price">$100</span>
             </div>
 
             <div class="menu-item">
