--- a/combos.html
+++ b/combos.html
@@ -35,7 +35,7 @@
 
             <div class="menu-item">
                 <img src="imagenes/donutsbox_SweetHoles.png" alt="Burger desayuno">
-                <h3>Burger desayuno/h3>
+                <h3>Burger desayuno</h3>
                 <p>Deliciosos menú para tus desayunos, con donuts y café.</p>
                 <span class="price">$100</span>
             </div>
