--- a/index.html
+++ b/index.html
@@ -82,11 +82,18 @@
             <span class="price">$65</span>
         </div>
 
-                <div class="menu-item">
+        <div class="menu-item">
             <img src="imagenes/burgerShot_cheese3.png" alt="Cheeseburger3">
             <h3>Triple Cheeseburger</h3>
             <p>Deliciosa triple hamburguesa con queso</p>
             <span class="price">$70/span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_tacos.png" alt="Taco">
+            <h3>Taco</h3>
+            <p>DElicioso taco con una receta especial.</p>
+            <span class="price">$60</span>
         </div>
             
     </section>
