--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <h2 class="section-title">Nuestra Explosión de Sabores</h2>
         <div class="menu-grid">
 
+            
+            <! Hamburguesas
         <div class="menu-item">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto con Bacon">
             <h3>Quecu Infarto con Bacon</h3>
@@ -94,6 +96,16 @@
             <h3>Taco</h3>
             <p>DElicioso taco con una receta especial.</p>
             <span class="price">$60</span>
+        </div>
+
+
+            <! Cosas varias
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_nuggets.png" alt="nuggets">
+            <h3>Nuggets</h3>
+            <p>Deliciosos nuggets</p>
+            <span class="price">$50</span>
         </div>
             
     </section>
