--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="menu-grid">
 
             
-            <! Hamburguesas
+            // Hamburguesas
         <div class="menu-item">
             <img src="imagenes/burgerShot_baconlov.png" alt="Hamburguesa Quecu Infarto con Bacon">
             <h3>Quecu Infarto con Bacon</h3>
@@ -99,7 +99,7 @@
         </div>
 
 
-            <! Cosas varias
+            // Cosas varias
 
         <div class="menu-item">
             <img src="imagenes/burgerShot_nuggets.png" alt="nuggets">
