--- a/index.html
+++ b/index.html
@@ -97,11 +97,24 @@
             <span class="price">$60</span>
         </div>
 
-
         <div class="menu-item">
             <img src="imagenes/burgerShot_nuggets.png" alt="nuggets">
             <h3>Nuggets</h3>
             <p>Deliciosos nuggets</p>
+            <span class="price">$50</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_chickenStick.png" alt="pollofrito">
+            <h3>Pollo Frito</h3>
+            <p>Delicioso pollo frito</p>
+            <span class="price">$50</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_natchos.png" alt="nashots">
+            <h3>Nashots</h3>
+            <p>Deliciosos nachos</p>
             <span class="price">$50</span>
         </div>
             
