--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
             <p>Deliciosos nachos</p>
             <span class="price">$50</span>
         </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_PorkHole.png" alt="salchicha">
+            <h3>Salchicha Shot</h3>
+            <p>Deliciosa salchicha</p>
+            <span class="price">$60</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_frenchTacos.png" alt="tacofrances">
+            <h3>Taco frances</h3>
+            <p>Delicioso taco al más puro estilo frances</p>
+            <span class="price">$65</span>
+        </div>
             
     </section>
 
