--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
             <p>Delicioso taco al más puro estilo frances</p>
             <span class="price">$65</span>
         </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_kebab.png" alt="kebab">
+            <h3>Kebab shot</h3>
+            <p>Delicioso kebab</p>
+            <span class="price">$70</span>
+        </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_chillidog.png" alt="hotdog">
+            <h3>Hot dog</h3>
+            <p>Delicioso hot dog</p>
+            <span class="price">$65</span>
+        </div>
             
     </section>
 
