--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
             <p>Delicioso hot dog</p>
             <span class="price">$65</span>
         </div>
+
+        <div class="menu-item">
+            <img src="imagenes/burgerShot_nuggets.png" alt="hamburguesota">
+            <h3>Hamburguesa triple</h3>
+            <p>Deliciosas tres hamburguesas en una</p>
+            <span class="price">$80</span>
+        </div>
             
     </section>
 
