--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
             <p>Deliciosas tres hamburguesas en una</p>
             <span class="price">$80</span>
         </div>
+
+        <div class="menu-item">
+            <img src="imagenes/frites_burgershot.png" alt="patatas">
+            <h3>Patatas fritas</h3>
+            <p>Deliciosas patatas fritas</p>
+            <span class="price">$50</span>
+        </div>
             
     </section>
 
