--- a/combos.html
+++ b/combos.html
@@ -41,10 +41,10 @@
             </div>
 
             <div class="menu-item">
-                <img src="imagenes/combo2.png" alt="Combo 2">
-                <h3>Combo 2</h3>
-                <p>Hamburguesa doble con bacon, aros de cebolla y refresco.</p>
-                <span class="price">$12.99</span>
+                <img src="imagenes/combo2.png" alt="Combo Ataque al corazón">
+                <h3>Combo Ataque al corazón</h3>
+                <p>x6 Quecu Infartos + x6 Burger Soda.</p>
+                <span class="price">$675</span>
             </div>
 
             <div class="menu-item">
