--- a/combos.html
+++ b/combos.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="menu-item">
-                <img src="imagenes/combo2.png" alt="Combo Ataque al corazón">
+                <img src="imagenes/burgershot_Menu.png" alt="Combo Ataque al corazón">
                 <h3>Combo Ataque al corazón</h3>
                 <p>x6 Quecu Infartos + x6 Burger Soda.</p>
                 <span class="price">$675</span>
