--- a/bebidas.html
+++ b/bebidas.html
@@ -74,6 +74,13 @@
                 <p>Una bebida perfecta para cuando necesites más energia.</p>
                 <span class="price">$65</span>
             </div>
+
+            <div class="menu-item">
+                <img src="imagenes/bubble_tea_orange.png" alt="té">
+                <h3>Té de burbujas</h3>
+                <p>Delicioso y refrescante</p>
+                <span class="price">$60</span>
+            </div>
             
         </div>
     </section>
