--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
         <div class="menu-item">
             <img src="imagenes/burgerShot_MeatSaver.png" alt="hamburguesota">
-            <h3>Hamburguesa triple</h3>
-            <p>Deliciosas tres hamburguesas en una</p>
+            <h3>Hamburguesota</h3>
+            <p>Deliciosa super hamburguesota para disfrutar con tus carnales.</p>
             <span class="price">$80</span>
         </div>
 
