--- a/combos.html
+++ b/combos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menús - Burger Shot</title>
+    <title>Combos - Burger Shot</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -36,8 +36,8 @@
             <div class="menu-item">
                 <img src="imagenes/donutsbox_SweetHoles.png" alt="Burger desayuno">
                 <h3>Burger desayuno</h3>
-                <p>Deliciosos menú para tus desayunos, con donuts y café.</p>
-                <span class="price">$100</span>
+                <p>x2 Donuts + x2 Cafés Shot.</p>
+                <span class="price">$150</span>
             </div>
 
             <div class="menu-item">
@@ -48,10 +48,10 @@
             </div>
 
             <div class="menu-item">
-                <img src="imagenes/combo3.png" alt="Combo 3">
-                <h3>Combo 3</h3>
-                <p>Hamburguesa vegetariana con ensalada y batido.</p>
-                <span class="price">$10.99</span>
+                <img src="imagenes/burgershot_Menu.png" alt="Combo Rompe Dieta">
+                <h3>Combo Rompe Dieta</h3>
+                <p>x3 Hamburguesotas + x2 Patatas fritas + x2 Burger Soda o Agua.</p>
+                <span class="price">$700</span>
             </div>
             
         </div>
