--- a/combos.html
+++ b/combos.html
@@ -53,6 +53,13 @@
                 <p>x3 Hamburguesotas + x2 Patatas fritas + x2 Burger Soda o Agua.</p>
                 <span class="price">$700</span>
             </div>
+
+            <div class="menu-item">
+                <img src="imagenes/burgershot_Menu.png" alt="Combo Tsunami de sabores">
+                <h3>Combo Tsunami de sabores</h3>
+                <p>x4 Hot Dogs + x4 Nashots + x2 Cervezas o Bebidas energeticas.</p>
+                <span class="price">$700</span>
+            </div>
             
         </div>
     </section>
